Added thymeleaf and now have frontend rendering properly

--- a/job-tracker/src/main/resources/templates/index.html
+++ b/job-tracker/src/main/resources/templates/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Application Tracker</title>
+    <link rel="stylesheet" href="/css/global.css">
+    <script src="/js/global.js"></script>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header class="flow-container">
+        <h1>Job Application Tracker</h1>
+    </header>
+    <form>
+        <!-- Form content goes here -->
+    </form>
+    <footer>
+        <!-- Footer content goes here -->
+    </footer>
 </body>
 </html>
