--- a/job-tracker/src/main/resources/templates/index.html
+++ b/job-tracker/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 <header class="flow-container">
     <h1>ApplySync</h1>
     <p>Track your job applications effortlessly</p>
-    <button>Sign Up</button>
+    <a class="" href="signup.html">Sign Up</a>
 </header>
 <main>
     <section class="flow-container">
